tests/errors/syn.missing-rparen.group.or
main :: () -> void {
    (x:=0);
};
